--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -15,7 +15,7 @@ h1{
     font-size: 80px;
     font-family: 'Jua', sans-serif;
     font-weight: 400;
-    color: gray;
+    color: white;
     text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
 }
 
@@ -23,7 +23,7 @@ span{
     font-size: 15px;
     font-family: 'Jua', sans-serif;
     font-weight: 400;
-    color: gray;
+    color: white;
     text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
 }
 
@@ -31,7 +31,7 @@ span{
     font-size: 50px;
     font-family: 'Jua', sans-serif;
     font-weight: 700;
-    color: gray;
+    color: white;
     text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
     
 
