--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -64,6 +64,7 @@ li{
     padding-right: 15px;
     padding-left: 10px;
     font-size: 25px;
+    color: white;
     text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
 }
 
