--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -43,6 +43,7 @@ span{
     width: 100px; 
     margin: 0 auto;
     text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
+    color: white;
 }
 
 #todo-form input{
