--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -17,6 +17,7 @@ h1{
     font-weight: 400;
     color: white;
     text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
+    text-align: center;
 }
 
 span{
@@ -25,6 +26,7 @@ span{
     font-weight: 400;
     color: white;
     text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
+    text-align: center;
 }
 
 #clock{
@@ -33,7 +35,7 @@ span{
     font-weight: 700;
     color: white;
     text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
-    
+    text-align: center;
 
 }
 
@@ -44,6 +46,7 @@ span{
     margin: 0 auto;
     text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
     color: white;
+    text-align: center;
 }
 
 #todo-form input{
@@ -54,11 +57,13 @@ span{
     border-top-right-radius: 10px; 
     border-bottom-left-radius: 10px; 
     border-bottom-right-radius: 10px;
+    text-align: center;
 }
 
 li{
     list-style-type: "👉  ";
     list-style-position: inside;
+    text-align: center;
     
 }
 #todo-list span{
@@ -67,6 +72,7 @@ li{
     font-size: 25px;
     color: white;
     text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
+    text-align: center;
 }
 
 button{
@@ -79,14 +85,14 @@ padding-inline: 0px;
 
 }
 #login-form{
-
+    text-align: center;
    height: 70px; 
 }
 
 #login-form input{
     font-size: 30px;
     font-family: 'Jua', sans-serif;
-    
+    text-align: center;
     border-radius: 10px; 
     border-top-left-radius: 10px; 
     border-top-right-radius: 10px; 
