--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -39,6 +39,14 @@ span{
 
 }
 
+#weather{
+    text-align: center;
+}
+
+#quote{
+    text-align: center;
+}
+
 #quote span{
     font-size: 20px;
     font-family: 'Jua', sans-serif;
@@ -46,6 +54,9 @@ span{
     margin: 0 auto;
     text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
     color: white;
+}
+
+#todo-form{
     text-align: center;
 }
 
@@ -86,7 +97,7 @@ padding-inline: 0px;
 }
 #login-form{
     text-align: center;
-   height: 70px; 
+    height: 70px; 
 }
 
 #login-form input{
